# bordo

./: .env.example  .gitignore  Cargo.toml  README.md  graphql.config.js  package.json  redwood.toml
api/db/: schema.prisma
api/db/migrations/20231115144918_/: migration.sql
api/db/migrations/20231115145209_/: migration.sql
api/src/graphql/: championships.sdl.ts  courtStatuses.sdl.ts  entries.sdl.ts  matches.sdl.ts  players.sdl.ts  raids.sdl.ts  teams.sdl.ts  tricks.sdl.ts
api/src/services/championships/: championships.scenarios.ts  championships.test.ts  championships.ts
api/src/services/courtStatuses/: courtStatuses.scenarios.ts  courtStatuses.test.ts  courtStatuses.ts
api/src/services/entries/: entries.scenarios.ts  entries.test.ts  entries.ts
api/src/services/matches/: matches.scenarios.ts  matches.test.ts  matches.ts
api/src/services/players/: players.scenarios.ts  players.test.ts  players.ts
api/src/services/raids/: raids.scenarios.ts  raids.test.ts  raids.ts
api/src/services/teams/: teams.scenarios.ts  teams.test.ts  teams.ts
api/src/services/tricks/: tricks.scenarios.ts  tricks.test.ts  tricks.ts
scripts/: seed.ts
web/: .stylelintrc.yml  package.json  vite.config.ts
web/config/: postcss.config.js
web/lib/aogiri/: Cargo.toml
web/lib/aogiri/src/: dto.rs  lib.rs
web/src/: App.tsx  Routes.tsx  entry.client.tsx  index.html
web/src/components/MatchCell/: MatchCell.mock.ts  MatchCell.stories.tsx  MatchCell.test.tsx  MatchCell.tsx
web/src/components/NavHead/: NavHead.stories.tsx  NavHead.test.tsx  NavHead.tsx
(+25 files in other folders)
