[package]
name = "aogiri"
dependencies="for KABADDI"
version = "0.1.0"
edition = "2021"
repository="https://github.com/hoe-rake/bordo.git"
license="MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen="0.2.88"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
